// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Value > renders correct with a given value 1`] = `
<text
  class="someClassName"
  style="user-select: none;"
  text-anchor="middle"
  x="50%"
  y="100"
>
  10
</text>
`;

exports[`Value > renders correct with a negative 0 1`] = `
<text
  class="someClassName"
  style="user-select: none;"
  text-anchor="middle"
  x="50%"
  y="100"
>
  0.00
</text>
`;

exports[`Value > renders nothing correct without a given value 1`] = `undefined`;
